// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`POIMarker Component renders correctly with snapshot for each POI type: POIMarker with type bixi 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "white",
        "borderRadius": 18,
        "borderWidth": 2,
        "elevation": 5,
        "height": 36,
        "justifyContent": "center",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 3.84,
        "width": 36,
      },
      {
        "backgroundColor": "#5cb85c",
      },
    ]
  }
/>
`;

exports[`POIMarker Component renders correctly with snapshot for each POI type: POIMarker with type bus_station 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "white",
        "borderRadius": 18,
        "borderWidth": 2,
        "elevation": 5,
        "height": 36,
        "justifyContent": "center",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 3.84,
        "width": 36,
      },
      {
        "backgroundColor": "#6f42c1",
      },
    ]
  }
/>
`;

exports[`POIMarker Component renders correctly with snapshot for each POI type: POIMarker with type library 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "white",
        "borderRadius": 18,
        "borderWidth": 2,
        "elevation": 5,
        "height": 36,
        "justifyContent": "center",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 3.84,
        "width": 36,
      },
      {
        "backgroundColor": "#6c757d",
      },
    ]
  }
/>
`;

exports[`POIMarker Component renders correctly with snapshot for each POI type: POIMarker with type metro 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "white",
        "borderRadius": 18,
        "borderWidth": 2,
        "elevation": 5,
        "height": 36,
        "justifyContent": "center",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 3.84,
        "width": 36,
      },
      {
        "backgroundColor": "#0d6efd",
      },
    ]
  }
/>
`;

exports[`POIMarker Component renders correctly with snapshot for each POI type: POIMarker with type other 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "white",
        "borderRadius": 18,
        "borderWidth": 2,
        "elevation": 5,
        "height": 36,
        "justifyContent": "center",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 3.84,
        "width": 36,
      },
      {
        "backgroundColor": "#adb5bd",
      },
    ]
  }
/>
`;

exports[`POIMarker Component renders correctly with snapshot for each POI type: POIMarker with type park 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "white",
        "borderRadius": 18,
        "borderWidth": 2,
        "elevation": 5,
        "height": 36,
        "justifyContent": "center",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 3.84,
        "width": 36,
      },
      {
        "backgroundColor": "#20c997",
      },
    ]
  }
/>
`;

exports[`POIMarker Component renders correctly with snapshot for each POI type: POIMarker with type restaurant 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "white",
        "borderRadius": 18,
        "borderWidth": 2,
        "elevation": 5,
        "height": 36,
        "justifyContent": "center",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 3.84,
        "width": 36,
      },
      {
        "backgroundColor": "#fd7e14",
      },
    ]
  }
/>
`;

exports[`POIMarker Component renders correctly with snapshot for each POI type: POIMarker with type shopping 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "white",
        "borderRadius": 18,
        "borderWidth": 2,
        "elevation": 5,
        "height": 36,
        "justifyContent": "center",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 3.84,
        "width": 36,
      },
      {
        "backgroundColor": "#dc3545",
      },
    ]
  }
/>
`;
